# sca-fuzzer-dynamo

./: extensions.txt
docs/: modules.md
dr_model/: .clang-format  CMakeLists.txt  README.md  dr_model.cpp  example.c  tracers.cpp  util.cpp
dr_model/adapters/: Makefile  example_adapter.c  link1.ld  revizor_adapter.c
dr_model/include/: dr_model.h  tracers.hpp  util.hpp
src/: cli.py  config.py  factory.py  fuzzer.py  generator.py  interfaces.py  isa_loader.py  model.py  util.py
src/x86/: get_spec.py  x86_config.py  x86_dr_model.py  x86_generator.py  x86_target_desc.py  x86_uni_model.py
src/x86/executor/: Makefile  main.h  measurement.c  templates.c
src/x86/tests/: min_x86.json  unit_model.py
